--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/registration.css">
 </head>
 <body>
-<form class="login-button" action="/library/registration" method="post">
+<form action="/library/registration" method="post">
     <h1>Registration Form</h1>
     <input type="text" name="user-name" placeholder="Enter name"/>
     <input type="text" name="user-login" placeholder="Enter login"/>
