--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/welcome.css">
 </head>
 <body>
+<div>
     <h1>Welcome!</h1>
     <form action="login.html">
         <button class="login" type="submit">Log In</button>
@@ -14,5 +15,6 @@
         <button class="registration" type="submit">Registration</button>
     </form>
     <h2><-FlowRyder Library-></h2>
+</div>
 </body>
 </html>
